--- a/.github/workflows/appium_android.yml
+++ b/.github/workflows/appium_android.yml
@@ -17,18 +17,12 @@ jobs:
       - name: Check out the repository
         uses: actions/checkout@v2
 
-      - name: Repository checked out
-        run: echo "Repository checked out successfully."
-
       # 2. Configura Java JDK 11
       - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
           java-version: '11'
-          distribution: 'temurin'  # Especifica la distribución de Java
-
-      - name: Java JDK setup complete
-        run: echo "Java JDK 11 installed successfully."
+          distribution: 'temurin'
 
       # 3. Configura el SDK de Android
       - name: Download and set up Android SDK
@@ -40,10 +34,14 @@ jobs:
           emulator: true
           ndk: true
 
-      - name: Android SDK setup complete
-        run: echo "Android SDK setup completed."
+      # 4. Crea un nuevo emulador Android (AVD)
+      - name: Create Android Emulator
+        run: |
+          echo "Creating Android emulator..."
+          echo "no" | avdmanager create avd -n test -k "system-images;android-30;default;x86_64" --force
+          echo "Android emulator created successfully."
 
-      # 4. Inicia el emulador Android
+      # 5. Inicia el emulador Android
       - name: Start Android Emulator
         run: |
           echo "Starting Android emulator..."
@@ -55,16 +53,13 @@ jobs:
           adb shell input keyevent 82
           echo "Android emulator started successfully."
 
-      # 5. Configura Python
+      # 6. Configura Python
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
           python-version: '3.8'
 
-      - name: Python setup complete
-        run: echo "Python set up successfully."
-
-      # 6. Instala las dependencias del proyecto
+      # 7. Instala las dependencias del proyecto
       - name: Install dependencies
         run: |
           echo "Installing dependencies..."
@@ -72,27 +67,27 @@ jobs:
           pip install -r requirements.txt
           echo "Dependencies installed."
 
-      # 7. Descarga el archivo APK
+      # 8. Descarga el archivo APK
       - name: Download APK
         run: |
           echo "Starting APK download..."
           curl -L -o picap.apk "https://d.apkpure.com/b/XAPK/co.picap.passenger?version=latest"
           echo "APK downloaded successfully."
 
-      # 8. Espera para asegurar la descarga del APK
+      # 9. Espera para asegurar la descarga del APK
       - name: Wait for APK to be downloaded
         run: |
           echo "Waiting for APK to be downloaded..."
           sleep 20
 
-      # 9. Instala el APK en el emulador
+      # 10. Instala el APK en el emulador
       - name: Install APK on Emulator
         run: |
           echo "Installing APK on emulator..."
           adb install picap.apk
           echo "APK installed successfully."
 
-      # 10. Inicia el servidor de Appium
+      # 11. Inicia el servidor de Appium
       - name: Run Appium server
         run: |
           echo "Starting Appium server..."
@@ -100,7 +95,7 @@ jobs:
           appium &
           echo "Appium server started."
 
-      # 11. Ejecuta el caso de prueba específico
+      # 12. Ejecuta el caso de prueba específico
       - name: Run Specific Android Automation Test
         env:
           DEVICE_NAME: "Android Emulator"
