--- a/.github/workflows/appium_android.yml
+++ b/.github/workflows/appium_android.yml
@@ -30,7 +30,7 @@ jobs:
         with:
           api-level: 30
           target: android-30
-          arch: x86_64
+          arch: arm64-v8a
           emulator: true
           ndk: true
 
